fixes for Certificate
