# routes/api.php
@@ -61,12 +61,11 @@ Route::prefix('v1')->group(function () {
         Route::post('/shops/delete', [ShopsSyncController::class, 'delete']);
 
         Route::post('/certificates', [CertificatesSyncController::class, 'update']);
-        Route::post('/certificates/delete', [CertificatesSyncController::class, 'delete']);
+//        Route::post('/certificates/delete', [CertificatesSyncController::class, 'delete']);
 
         Route::post('/coupons', [CouponsSyncController::class, 'update']);
         Route::post('/coupons/delete', [CouponsSyncController::class, 'delete']);
 
-//
         Route::post('/bonuses', [BonusesSyncController::class, 'update']);
         Route::post('/bonuses/delete', [BonusesSyncController::class, 'delete']);
 
