# storage/api-docs/api-docs.json
@@ -363,45 +363,6 @@
                 ]
             }
         },
-        "/api/v1/integrations/1c/taxonomy/certificates/delete": {
-            "post": {
-                "tags": [
-                    "certificates"
-                ],
-                "summary": "Delete certificates by ids array",
-                "description": "Delete certificates",
-                "operationId": "3d78f72a39a912af5cab6c72a8b8f8c0",
-                "requestBody": {
-                    "$ref": "#/components/requestBodies/C1EntityDeleteRequestBody"
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successfully response",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "deleted": {
-                                            "type": "integer",
-                                            "example": 3
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
         "/api/v1/integrations/1c/taxonomy/collections": {
             "post": {
                 "tags": [
@@ -901,6 +862,22 @@
                         "type": "number",
                         "format": "float",
                         "example": 5000
+                    },
+                    "activated_at": {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2026-06-12",
+                        "nullable": true
+                    },
+                    "expires_at": {
+                        "type": "string",
+                        "format": "date",
+                        "example": "2026-09-31",
+                        "nullable": true
+                    },
+                    "is_used": {
+                        "type": "boolean",
+                        "example": false
                     }
                 },
                 "type": "object"
